Another sample plot

--- a/Rust Notebook Sample.ipynb
+++ b/Rust Notebook Sample.ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba9297e1",
+   "id": "cc1cd7e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eeb921ca",
+   "id": "9528c4f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9dd41f02",
+   "id": "731c99c6",
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +141,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "ab05df05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "    <div id=\"2sjWNvz41zSWYaIsUhqn\" class=\"plotly-graph-div\" style=\"height:100%; width:100%;\"></div>\n",
+       "    <script type=\"text/javascript\">\n",
+       "        require(['https://cdn.plot.ly/plotly-2.8.3.min.js'], function(Plotly) {\n",
+       "            window.PLOTLYENV=window.PLOTLYENV || {};\n",
+       "\n",
+       "            if (document.getElementById(\"2sjWNvz41zSWYaIsUhqn\")) {\n",
+       "                var trace_0 = {\"type\":\"scatter\",\"mode\":\"markers\",\"x\":[1,2,3,4,5,6,7,8,9,10],\"y\":[1.0,4.0,9.0,16.0,25.0,36.0,49.0,64.0,81.0,100.0]};\n",
+       "var data = [trace_0];\n",
+       "var layout = {\"height\":525};\n",
+       "                Plotly.newPlot(\n",
+       "                    '2sjWNvz41zSWYaIsUhqn',\n",
+       "                    data,\n",
+       "                    layout,\n",
+       "                    {\"responsive\": true}\n",
+       "                ).then(function(){\n",
+       "                    var gd = document.getElementById('2sjWNvz41zSWYaIsUhqn');\n",
+       "                    var x = new MutationObserver(function (mutations, observer) { {\n",
+       "                            var display = window.getComputedStyle(gd).display;\n",
+       "                            if (!display || display === 'none') { {\n",
+       "                                console.log([gd, 'removed!']);\n",
+       "                                Plotly.purge(gd);\n",
+       "                                observer.disconnect();\n",
+       "                            } }\n",
+       "                    } });\n",
+       "\n",
+       "                    // Listen for the removal of the full notebook cells\n",
+       "                    var notebookContainer = gd.closest('#notebook-container');\n",
+       "                    if (notebookContainer) { {\n",
+       "                        x.observe(notebookContainer, {childList: true});\n",
+       "                    } }\n",
+       "\n",
+       "                    // Listen for the clearing of the current output cell\n",
+       "                    var outputEl = gd.closest('.output');\n",
+       "                    if (outputEl) { {\n",
+       "                        x.observe(outputEl, {childList: true});\n",
+       "                    } } })\n",
+       "            };\n",
+       "        });\n",
+       "            </script>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let n: usize = 100;\n",
+    "let t = vec![1,2,3,4,5,6,7,8,9,10];\n",
+    "let y = t.iter().map(|v| (*v as f64).powf(2.0)).collect::<Vec<f64>>();\n",
+    "let trace = Scatter::new(t,y).mode(Mode::Markers);\n",
+    "let mut plot = Plot::new();\n",
+    "plot.add_trace(trace);\n",
+    "let layout = Layout::new().height(525);\n",
+    "plot.set_layout(layout);\n",
+    "plot.notebook_display();"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "821458d8",
+   "id": "c62ecead",
    "metadata": {},
    "outputs": [],
    "source": []
